--- a/index.html
+++ b/index.html
@@ -1,10 +1,72 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>
-			Hello World
-		</title>
-	</head>
-	<body>
-		Write your code for the submission by editing this file
-	</body>
-</html>
+  <head>
+    <title>covid guide</title>
+  </head>
+  <body style="background-color: blanchedalmond;">
+ <img src="https://www.who.int/images/default-source/mca/mca-covid-19/coronavirus-2.tmb-1024v.jpg?Culture=en&sfvrsn=4dba955c_6" width="850" height="150">
+ <table border style="width:68%">
+    <tr>
+      <th><a href="#about">about</a></th>
+      <th><a href="#guidelines">guidelines</a></th>
+      <th><a href="#resources">resources</a></th>
+      <th><a href="#faqs">faqs</a></th>
+      <th><a href="#contact">contact</a></th>
+    </tr>
+ </table>
+ <h2 id="about">About</h2><br>
+ <pre>Coronavirus disease (COVID-19) is an infectious disease caused by the SARS-CoV-2 virus.
+
+    Most people infected with the virus will experience mild to moderate respiratory illness and
+    recover without requiring special treatment. However, some will become seriously ill and require
+    medical attention. Older people and those with underlying medical conditions like cardiovascular disease,
+    diabetes, chronic respiratory disease, or cancer are more likely to develop serious illness. Anyone can get 
+    sick with COVID-19 and become seriously ill or die at any age.The best way to prevent and slow down transmission
+    is to be well informed about the disease and how the virus spreads. Protect yourself and others from infection 
+    by staying at least 1 metre apart from others, wearing a properly fitted mask, and washing your hands or using an 
+    alcohol-based rub frequently. Get vaccinated when it’s your turn and follow local guidance.</pre><br><br><br>
+    <h2 id="guidelines">guidelines</h2><br>
+    <pre>
+         1.Get vaccinated when a vaccine is available to you.
+         2.Stay at least 1 metre apart from others, even if they don’t appear to be sick.
+         3.Wear a properly fitted mask when physical distancing is not possible or when in poorly ventilated settings.
+         4.Choose open, well-ventilated spaces over closed ones. Open a window if indoors.
+         5.Wash your hands regularly with soap and water or clean them with alcohol-based hand rub.
+         6.Cover your mouth and nose when coughing or sneezing.
+         7.If you feel unwell, stay home and self-isolate until you recover.</pre><img src="https://imgk.timesnownews.com/media/WhatsApp_Image_2021-04-08_at_5.13.08_PM_0.jpeg"><br>
+
+    <h2 id="resources">resources</h2><br>
+    1.<a href="https://www.youtube.com/watch?v=xTvd7oAEyhs">doc advise</a><br>
+    2.<a href="https://www.youtube.com/watch?v=fYGCI553Z0M">vaccine </a><br>
+    3.<a href="https://www.youtube.com/watch?v=_Hi6_JQesSQ">projected damage</a><br>
+    4.<a href="https://www.youtube.com/watch?v=B8UEZ9cfgz4">variants</a><br>
+    <h2 id="faqs">faq's</h2><br>
+    <pre>
+1.What is corona virus<br>
+  Corona viruses are a large family of viruses which may cause illness
+  in animals or humans. In humans, several coronaviruses are known
+  to cause respiratory infections ranging from the common cold to more
+  severe diseases such as Middle East Respiratory Syndrome (MERS)
+  and Severe Acute Respiratory Syndrome (SARS). The most recently
+  discovered coronavirus causes coronavirus disease COVID-19.
+2.What is COVID-19<br>
+  COVID-19 is the infectious disease caused by the most recently
+  discovered corona virus. This new virus and disease were unknown
+  before the outbreak began in Wuhan, China, in December 2019.<br>
+3.What are the symptoms of COVID-19
+  The most common symptoms of COVID-19 are fever, tiredness, and
+  dry cough. Some patients may have aches and pains, nasal
+  congestion, runny nose, sore throat or diarrhea. These symptoms are
+  usually mild and begin gradually. Some people become infected but
+  don’t develop any symptoms and don't feel pain
+    </pre><br>
+    <h2 id="contact">contact</h2><br>
+    <address>
+      srinath<br>
+      chennai<br>
+        tamilnadu<br>
+        <phone:9978644583>9978644583</phone:9978644583>
+    </address>   
+   </body>
+ </html>
+  
